[package]
name = "wasm-ttf2woff"
description = "A WebAssembly module to convert ttf fonts to woff"
version = "0.1.0"
authors = ["Touchify <dev@touchify.co>"]
repository = "https://github.com/touchifyapp/wasm-ttf2woff"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#default = ["console_error_panic_hook"] # only during development
#default = ["wee_alloc"] # does not work for now for wasm output with stable rust realease (works with nightly)

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = true }
deflate = "0.8.6"
wasm-bindgen = "0.2.0"
wee_alloc = { version = "0.4.5", optional = true }

#[dependencies.web-sys]
#version = "0.3"
#features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s" # Tell `rustc` to optimize for small code size.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
